Bug 16118 - Weborder Mobile: Too big gap between the promo message and buttons

--- a/skins/weborder_mobile/css/footer.css
+++ b/skins/weborder_mobile/css/footer.css
@@ -311,8 +311,8 @@
     font-family: helvetica neue;
     font-size: 2.5em;
     font-weight: italic;
-    height: 2.5em;
-    margin-top: -2.5em;
+    height: 1.5em;
+    margin-top: -1.5em;
     text-align: center;
 }
 
